Fix tilkall veileder such that it works regardsless of section visibility.

--- a/src/css/setup/variablesmatematikkmooc.less
+++ b/src/css/setup/variablesmatematikkmooc.less
@@ -2,8 +2,8 @@
 @logo-image2x: "https://matematikk-mooc.github.io/frontend/bitmaps/mmooc-logo@2x.png";
 @logo-background-size: 80%;
 @logo-height: 100%;
-@logo-width: 100%;
-@logo-padding: 0px 0px 0px 0; 
+@logo-width: 240px;
+@logo-padding: 7px 240px 0px 0; 
 
 @menuItemFontSize: 18px; 
 @menuItemFontWeight: 600;
